mobile navbar overflow fix

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  min-height: 100vh;
+  min-height: 120vh;
 
   &__content {
     padding-top: 40px;
